Fixed issue with images on mobile
(for real this time)

--- a/src/default.css
+++ b/src/default.css
@@ -61,6 +61,10 @@ div#content>img {
   display: block;
   margin: 0 auto;
   border-radius: 10px;
+  max-width: 100%;
+  max-height: 400px;
+  width: auto;
+  height: auto;
 }
 
 div#content>p.caption {
